# myaleo1

./: .gitignore  Cargo.toml  README.md
.integration/: Cargo.toml
.integration/tests/: dpc_testnet2.rs
algorithms/: Cargo.toml
algorithms/src/traits/: snark.rs
curves/: Cargo.toml
dpc/: Cargo.toml
dpc/src/network/: testnet2.rs
dpc/src/virtual_machine/: virtual_machine.rs
eval/src/operations/: add.rs  and.rs  div.rs  eq.rs  ge.rs  gt.rs  le.rs  lt.rs  mul.rs  negate.rs  or.rs  pow.rs  sub.rs
eval/src/setup/: mod.rs  state.rs
fields/: Cargo.toml
gadgets/: Cargo.toml
ir/proto/: ir.proto
ir/src/: entrypoint.rs  program.rs
marlin/: Cargo.toml
parameters/: Cargo.toml
polycommit/src/: lib.rs
programs/: Cargo.toml
programs/src/: lib.rs  objects.rs  traits.rs
r1cs/: Cargo.toml
r1cs/src/: errors.rs
synthesizer/: Cargo.toml  README.md
synthesizer/src/: circuit_synthesizer.rs  lib.rs  serialized_circuit.rs  serialized_field.rs  serialized_index.rs  summarized_circuit.rs
synthesizer/src/block/transition/: mod.rs
synthesizer/src/process/: execute.rs
synthesizer/src/process/stack/: evaluate.rs  execute.rs
synthesizer/src/process/stack/finalize_types/: initialize.rs
synthesizer/src/process/stack/register_types/: initialize.rs
synthesizer/src/program/closure/output/: bytes.rs  mod.rs  parse.rs
synthesizer/src/program/finalize/command/: load.rs
synthesizer/src/program/finalize/output/: bytes.rs  mod.rs  parse.rs
synthesizer/src/program/function/output/: bytes.rs  mod.rs  parse.rs
utilities/: Cargo.toml
wasm/: Cargo.toml
(+54 files in other folders)
