[package]
name = "snarkvm-synthesizer"
version = "0.7.9"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Circuit synthesizer for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.7.9"
default-features = false

[dependencies.anyhow]
version = "1.0.0"

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.7.9"
default-features = false

[dependencies.snarkvm-gadgets]
path = "../gadgets"
version = "0.7.9"

[dependencies.snarkvm-r1cs]
path = "../r1cs"
version = "0.7.9"
default-features = false

[dependencies.num-bigint]
version = "0.4"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0"

[dependencies.sha2]
version = "0.9"

[dependencies.hex]
version = "0.4"
